2008-01-28  Albert Chu  <chu11@llnl.gov>

	* src/libgenders/gendersllnl.c (genders_get_cluster): Fix logic
	corner case.

	* dist/inst.c (main): Remove pointless check.
	
2007-10-17  Albert Chu  <chu11@llnl.gov>

	* DISCLAIMER.UC: New file.

	* DISCALIMER: Updated with new disclaimer.

	* Makefile.am, gendersllnl.spec.in: Add DISCLAIMER.UC.

	* Globally update copyright and fsf address.
	
2007-10-02  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: Update for release.

	* tagged gendersllnl-1-10-1
	
2007-10-01  Albert Chu  <chu11@llnl.gov>

	* dist/dist2 (participating_nodes): Use genders query instead of
	getnodes for opt_g option.

	* man/dist/dist2.1: Update appropriately.
	
2007-10-01  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: Update for release.

	* tagged gendersllnl-1-9-1
	
2007-09-27  Albert Chu  <chu11@llnl.gov>

	* man/dist/dist2.1: Update with -F information.
	
2007-09-27  Py Watson <watson30@llnl.gov>

	* dist/dist2: Use basename-computed script name in usage message.
	Remove obsolete -F option that disted to nodes with "frame".  Add
	"-F genders_file" option to explicitly use the given genders file.
	Use defined() in if statements where "0" should be true.  Simplify
	checking for use of alternate transport by setting flag variable
	when opt_P is used.  Rewrite usage() to better match man page and
	include new -F usage.
	
2007-09-11  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: Update for release.

	* tagged gendersllnl-1-8-1
	
2007-09-10  Albert Chu  <chu11@llnl.gov>

	* dist/inst.c (main): Fix compiler warnings.
	
2007-09-05  Albert Chu  <chu11@llnl.gov>

        * Fix FSF address throughout.
	
2007-07-26 Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec.in: Add genders build requirement.
	
2007-05-29 Dave Fox <foxd@llnl.gov>

	* dist2, man/dist/dist2.1: Add 'rsh_alt_path' genders support.
	
2007-05-23 Albert Chu  <chu11@llnl.gov>

	* compat/Hostlist.pm: Default compress() to use quadrics style