@@ -1,3 +1,8 @@
+2008-01-29  Albert Chu  <chu11@llnl.gov>
+
+        * src/libcommon/hostlist.h, src/libcommon/hostlist.c: Update to
+        new libs.
+	
 2008-01-28  Albert Chu  <chu11@llnl.gov>
 
 	* src/libgenders/gendersllnl.c (genders_get_cluster): Fix logic
